# cargo-reduce-recipe

./: .gitignore  Cargo.toml  README.md
recipes/: recipe-foo-reduced.json  recipe-no-workspace.json  recipe.json
src/: lib.rs  main.rs
test-data/recipes/: given-recipe-bar.json  recipe-bar-reduced.json  recipe-bar.json  recipe-foo.json  recipe.json  want-recipe-bar.json
test-data/workspace/: Cargo.toml  docker-compose.yml  justfile
test-data/workspace/bar/: Cargo.toml
test-files/: given-recipe-bar.json  given-recipe-baz.json  want-recipe-bar.json  want-recipe-baz.json
test-workspace/: .gitignore  Dockerfile
test-workspace/baz/: Cargo.toml
test-workspace/foo/: Cargo.toml
